2026-03-10_dhl_kubernetes/lab0/workspace/kubernetes/01_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-hello-world
  labels:
    app: simple-hello-world
    svc: example
    as: df
spec:
  containers:
    - name: main
      image: ghcr.io/ondrejsika/training-example
      ports:
        - containerPort: 80
      resources:
        requests:
          memory: 1Mi
          cpu: 1m
        limits:
          memory: 20Mi
          cpu: 20m
