2026-03-10_dhl_kubernetes/lab0/workspace/kubernetes/ingress_openshift_domain.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-openshift-domain
  annotations:
    route.openshift.io/termination: "edge"
    route.openshift.io/insecureEdgeTerminationPolicy: "Redirect"
spec:
  ingressClassName: openshift-default
  rules:
    - host: hello-world.apps.training.germanywestcentral.aroapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-clusterip
                port:
                  number: 80
