2026-03-10_dhl_kubernetes/lab0/workspace/kubernetes/pvc_mount_example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pvc-mount-example
spec:
  replicas: 4
  selector:
    matchLabels:
      app: pvc-mount-example
  template:
    metadata:
      labels:
        app: pvc-mount-example
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: default-pvc
      containers:
        - name: nginx
          image: sikalabs/nginx-public
          resources:
            requests:
              cpu: 20m
              memory: 30Mi
            limits:
              cpu: 50m
              memory: 50Mi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /usr/share/nginx/html
---
apiVersion: v1
kind: Service
metadata:
  name: pvc-mount-example
spec:
  type: ClusterIP
  selector:
    app: pvc-mount-example
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pvc-mount-example
  annotations:
    route.openshift.io/termination: "edge"
    route.openshift.io/insecureEdgeTerminationPolicy: "Redirect"
spec:
  ingressClassName: openshift-default
  rules:
    - host: pvc-mount-example.apps.training.germanywestcentral.aroapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pvc-mount-example
                port:
                  number: 80
